refactor(payment): move PaymentItemSummary struct to dto package - Move PaymentItemSummary struct from payment_item_repository.go to payment_dto.go - Update import references in payment_item_repository.go and payment_controller.go
